fixed spacing on hashrouter

--- a/src/Components/Founder/style.css
+++ b/src/Components/Founder/style.css
@@ -1,4 +1,5 @@
 .founder {
+  padding-top: 56px;
 }
 
 .image-container {
